feat: adiciona endpoint e logica de curtir uma avaliacao